Now you can override tab id

--- a/spec/dummy/app/views/home/index.html.erb
+++ b/spec/dummy/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
           <div>This is home tab</div>
       <% end %>
 
-      <% t.easy_tab :products do %>
+      <% t.easy_tab :products, active: true do %>
           <div>This is products tab</div>
       <% end %>
   <% end %>
